--- a/yoonjisu/views/join.ejs
+++ b/yoonjisu/views/join.ejs
@@ -16,7 +16,7 @@
     <h1>Join my website!</h1>
     <section class="messages"></section>
     <form action="/join" method="post">
-      email : <input type="text" name="eamil" /> <br />
+      email : <input type="text" name="email" /> <br />
       password : <input type="text" name="password" /> <br />
       <input type="submit" />
     </form>
