--- a/yoonjisu/views/main.ejs
+++ b/yoonjisu/views/main.ejs
@@ -16,6 +16,7 @@
       1500s, when an unknown printer took a galley of type and scrambled it to
       make a type specimen book.
     </p>
+    <div><a href="/logout">logout</a></div>
 
     <script src="main.js"></script>
   </body>
